--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,13 +11,13 @@
         <h1>Welcome to Our Events Page</h1>
     </header>
     <main>
-        <section id="events">
-            <div class="event" data-article="{{ url_for('event1') }}">
+        <article id="events">
+            <div class="event1" data-article="{{ url_for('event1') }}">
                 <h2>Event 1</h2>
                 <p>Date: June 10, 2024</p>
+                <p>Description of the event goes here. You can include any details about the event, photos, and other relevant information.</p>
             </div>
-            <!-- Add more events here -->
-        </section>
+        </article>
     </main>
     <script src="../static/js/scripts.js"></script>
 </body>
