--- a/app/static/css/styling.css
+++ b/app/static/css/styling.css
@@ -1,14 +1,28 @@
 header {
     background-color: #4CAF50;
     color: white;
-    padding: 0.8rem 0;
-    text-align: center;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    height: auto;
+    width: 100%;
+    display: block;
 }
 
-header h1 {
-    font-size: 2rem;
-    margin-bottom: 0.9rem;
+.navbar {
+    border: solid black 1px;    
+    width: 100%;
+    height: 45px;
+}
+
+.navbar ul {
+    border: solid red 1px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.navbar ul li {
+    border: solid brown 1px;
+    list-style: none;
 }
 
 body {
