--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Events Page</h1>
+        <nav class="navbar">
+            <ul class="nav__elements">
+                <li><a href="#">Image_logo</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Cities</a></li>
+            </ul>
+        </nav>
+        <div class="hero__sec">
+            Here you can see the best events in Timisoara!
+        </div>
     </header>
     <main>
         <section id="events">
