working on navbar

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,12 +9,10 @@
 <body>
     <header>
         <nav class="navbar">
-            <ul class="nav__elements">
-                <li><a href="#">Image_logo</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Cities</a></li>
-            </ul>
+            <div class="logo">
+                <a href="#"><img src="../static/images/logo.png" alt="error img"></a>
+                <a href="#"><img src="" alt="error img"></a>
+            </div>
         </nav>
         <div class="hero__sec">
             Here you can see the best events in Timisoara!
