--- a/app/static/css/styling.css
+++ b/app/static/css/styling.css
@@ -7,22 +7,16 @@ header {
     display: block;
 }
 
-.navbar {
-    border: solid black 1px;    
+.navbar { 
+    display: flex;
+    justify-content: ;
     width: 100%;
     height: 45px;
+    padding: 15px 0;
 }
 
-.navbar ul {
-    border: solid red 1px;
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-}
-
-.navbar ul li {
-    border: solid brown 1px;
-    list-style: none;
+.logo img {
+    width: 50px;
 }
 
 body {
