working on navbar progress

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,10 +9,8 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">
-                <a href="#"><img src="../static/images/logo.png" alt="error img"></a>
-                <a href="#"><img src="" alt="error img"></a>
-            </div>
+            <a href="#"><img class="logo" src="../static/images/logo.png" alt="error img"></a>
+            <a href="#"><img class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img"></a>
         </nav>
         <div class="hero__sec">
             Here you can see the best events in Timisoara!
