--- a/app/static/css/styling.css
+++ b/app/static/css/styling.css
@@ -9,14 +9,24 @@ header {
 
 .navbar { 
     display: flex;
-    justify-content: ;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 45px;
     padding: 15px 0;
+    border: solid red 1px;
 }
 
-.logo img {
-    width: 50px;
+.logo {
+    width: 45px;
+    border: solid 1px pink;
+    padding: 0 0 0 1.5rem;
+}
+
+.hamburger_menu {
+    width: 45px;
+    border: solid 1px pink;
+    padding: 0 1.5rem 0 0;
 }
 
 body {
