--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
             <a href="#"><img class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img"></a>
         </nav>
         <div class="hero__sec">
-            Here you can see the best events in Timisoara!
+            Check out the most interesting events that take place in Timisoara!
         </div>
     </header>
     <main>
