--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Events Home Page</title>
     <link rel="stylesheet" href="../static/css/styling.css">
 </head>
-<body>
+<body id="body">
     <div id="menu__body" class="menu__active">
         <p>aa</p>
         <p>bb</p>
