--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,15 @@
     </div>
     <header>
         <nav class="navbar">
-            <a href="#"><img class="logo" src="../static/images/logo.png" alt="error img"></a>
-            <div class="menu_buttons">
+            <div class="logos">
+                <a href="#"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
+                <a href="#" class="logo_text">Eventer</a>
+            </div>
+            <div class="contact">
+                <a href="#"><img class="phone_icon" src="../static/images/phone.png" alt="rooro"></a>
+                <a href="#"><p>Contact</p></a>
+            </div>
+            <div class="menu">
                 <img id="menu__opener" onclick="menuDictating()" class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img">
                 <img id="menu__closer" onclick="menuDictating()" class="x_button" src="../static/images/close.png" alt="error img">
             </div>
