--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,14 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Home Page</title>
+    <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../static/css/styling.css">
 </head>
 <body id="body">
-    <div id="menu__body" class="menu__active">
-        <p>aa</p>
-        <p>bb</p>
-        <p>cc</p>
-        <p>dd</p>
+    <div id="menu__body" class="menu_active">
+        <div class="search_bar">
+            Search for an event
+        </div>
+        <div class="register_button">
+            Register as an event organiser
+        </div>
+        <ul class="navigation_links">
+            <li class="event_link"><a href="#">About</a></li>
+            <li class="event_link"><a href="#">Events</a></li>
+            <li class="event_link"><a href="#">Cities</a></li>
+            <li class="event_link"><a href="#">Dates</a></li>
+            <li class="event_link"><a href="#">Contact</a></li>
+        </ul>
+        <div class="post_event">
+            Post an event
+        </div>
     </div>
     <header>
         <nav class="navbar">
@@ -19,9 +32,9 @@
                 <a href="#"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
                 <a href="#" class="logo_text">Eventer</a>
             </div>
-            <div class="contact">
-                <a href="#"><img class="phone_icon" src="../static/images/phone.png" alt="rooro"></a>
-                <a href="#"><p>Contact</p></a>
+            <div class="cities">
+                <a href="#"><img class="city_icon" src="../static/images/city.png" alt="rooro"></a>
+                <a href="#"><p>Cities</p></a>
             </div>
             <div class="menu">
                 <img id="menu__opener" onclick="menuDictating()" class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img">
