post events (incomplete)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
             <li class="event_link"><a href="#">Contact</a></li>
         </ul>
         <div class="post_event">
-            Post an event
+            <a href="/post_event">Post an event</a>
         </div>
     </div>
     <header>
