--- a/app/templates/post_event.html
+++ b/app/templates/post_event.html
@@ -11,7 +11,7 @@
     <form action="#" method="post" enctype="multipart/form-data">
         <div>
             <label for="image">Upload Image:</label>
-            <input type="file" id="image" name="image" accept="image/*" required>
+            <input type="file" id="image-input" name="image" accept="image/*" required>
         </div>
         <div>
             <label for="title">Title:</label>
