same thing again

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events Home Page</title>
     <link rel="icon" href="../static/images/logo.png"/>
-    <link rel="stylesheet" href="../static/css/styling.css">
+    <link rel="stylesheet" href="../static/css/index.css">
 </head>
 <body id="body">
     <div id="menu__body" class="menu_active">
