--- a/app/static/css/event.css
+++ b/app/static/css/event.css
@@ -2,18 +2,17 @@ body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
     color: #333;
-    max-width: 800px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 20px;
     background-color: #f4f4f4;
 }
-header {
-    background-color: #3498db;
-    color: white;
-    text-align: center;
-    padding: 1em;
-    border-radius: 5px 5px 0 0;
+
+main {
+    padding: 2rem 1rem;
+    max-width: 1000px;
+    margin: 0 auto;
 }
+
 h1 {
     margin: 0;
 }
