--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ event.title }}</title>
+    <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../static/css/event.css">
     <link rel="stylesheet" href="../static/css/navbar.css">
 </head>
@@ -11,8 +12,8 @@
     <header>
         <nav class="navbar">
             <div class="logos">
-                <a href="#"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
-                <a href="#" class="logo_text">Eventer</a>
+                <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
+                <a href="/" class="logo_text">Eventer</a>
             </div>
             <div class="cities">
                 <a href="#"><img class="city_icon" src="../static/images/city.png" alt="rooro"></a>
