--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,8 +26,8 @@
     <header>
         <nav class="navbar">
             <div class="logos">
-                <a href="#"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
-                <a href="#" class="logo_text">Eventer</a>
+                <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
+                <a href="/" class="logo_text">Eventer</a>
             </div>
             <div class="cities">
                 <a href="#"><img class="city_icon" src="../static/images/city.png" alt="rooro"></a>
