--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,8 +37,13 @@
         </nav>
     </header>
     <main>
-        <section class="hero_sec">
-            Check out the most interesting events that will take place in Timisoara!
+        <section class="hero">
+            <div class="hero-left">
+                <h2>Discover the best events in Timisoara</h2>
+            </div>
+            <div class="hero-right">
+                <img src="../static/images/hero.jpg">
+            </div>
         </section>
         <section id="events">
             {% for event in events %}
