--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -192,6 +192,7 @@ header{
     border-radius: 10px;
     padding: 35px 0; 
     margin-bottom: 30px;
+    margin-top: 30px;
     background-color: #3f3f3f;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     overflow: hidden; /* Prevent overflow of child elements */
