--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -39,7 +39,7 @@
     <main>
         <section class="hero">
             <div class="hero-left">
-                <h2>Discover the best events in Timisoara</h2>
+                <h2>Discover the best events in Timisoara!</h2>
             </div>
             <div class="hero-right">
                 <img src="../static/images/hero.jpg">
@@ -61,11 +61,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Eventer. All rights reserved.</p>
         <nav>
-            <a href="#">Privacy Policy</a> | 
-            <a href="#">Terms of Service</a> | 
-            <a href="#">Contact Us</a>
+        <p>&copy; 2024 Eventer. All rights reserved.</p>
+        <a href="#">Privacy Policy</a> | 
+        <a href="#">Terms of Service</a> | 
+        <a href="#">Contact Us</a>
         </nav>
     </footer>
     <script src="../static/js/scripts.js"></script>
