--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -26,6 +26,18 @@
         </nav>
     </header>
     <main>
+        <div id="menu__body" class="menu_active">
+            <ul class="navigation_links">
+                <li class="event_link"><a href="#">Home</a></li>
+                <li class="event_link"><a href="#">Events</a></li>
+                <li class="event_link"><a href="#">Cities</a></li>
+                <li class="event_link"><a href="#">Dates</a></li>
+                <li class="event_link"><a href="#">Contact</a></li>
+            </ul>
+            <div class="post_event">
+                <a href="/post_event">Post an event</a>
+            </div>
+        </div>
         <h1>{{ event.title }}</h1>
         <img src="{{ url_for('static', 
         filename=event.image_filepath.replace('app\\static\\', '').replace('\\', '/')) }}" 
@@ -35,7 +47,6 @@
                 <!--<span class="date">{{ event.date }}</span>-->
                 <!--<span class="location">{{ event.location }}</span>-->
             </div>
-
             <h2>About the Event</h2>
             {% autoescape false %}
             <p>{{ event.description }}</p>
