design improvement for posting events

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -207,7 +207,7 @@ header{
 
 body {
     background-color: white;
-    color: #333;
+    color: #3f3f3f;
     line-height: 1.6;
     margin: 0;
     display: flex;
