--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,7 @@
             <li class="event_link"><a href="#">Contact</a></li>
         </ul>
         <div class="post_event">
-            <a href="/post_event">Post an event</a>
+            <a href="/post_event">Post your event!</a>
         </div>
     </div>
     <header>
