--- a/app/templates/post_event.html
+++ b/app/templates/post_event.html
@@ -25,6 +25,10 @@
                 <input type="text" id="title" name="title" required placeholder="Enter your event's captivating title">
             </div>
             <div class="form-group">
+                <label for="event-date">Event Date</label>
+                <input type="date" id="event-date" name="event-date" required>
+            </div>
+            <div class="form-group">
                 <label for="description">Event Description</label>
                 <textarea id="description" name="description" rows="4" required placeholder="Describe your amazing event in vivid detail"></textarea>
             </div>
