dates are saved in the database and displayed on events

--- a/app/templates/events/db_entries.html
+++ b/app/templates/events/db_entries.html
@@ -21,7 +21,8 @@
                 <td>{{ event.id }}</td>
                 <td>{{ event.title }}</td>
                 <td>{{ event.description }}</td>
-                <td>{{ event.image_filename }}</td>
+                <td>{{ event.image_filepath }}</td>
+                <td>{{ event.date }}</td>
             </tr>
             {% endfor %}
         </table>
