--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -44,7 +44,7 @@
         alt="{{ event.title }}" class="event-image">
         <div class="event-details">
             <div class="date-location">
-                <!--<span class="date">{{ event.date }}</span>-->
+                <span class="date">{{ event.date }}</span>
                 <!--<span class="location">{{ event.location }}</span>-->
             </div>
             <h2>About the Event</h2>
