--- a/app/templates/post_event.html
+++ b/app/templates/post_event.html
@@ -26,7 +26,7 @@
             </div>
             <div class="form-group">
                 <label for="event-date">Event Date</label>
-                <input type="date" id="event-date" name="event-date" required>
+                <input type="date" id="date" name="date" required>
             </div>
             <div class="form-group">
                 <label for="description">Event Description</label>
