--- a/app/templates/events/event1.html
+++ b/app/templates/events/event1.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Event 1: Detailed Article</h1>
+        <nav class="navbar">
+            <div class="logos">
+                <a href="#"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
+                <a href="#" class="logo_text">Eventer</a>
+            </div>
+            <div class="cities">
+                <a href="#"><img class="city_icon" src="../static/images/city.png" alt="rooro"></a>
+                <a href="#"><p>Cities</p></a>
+            </div>
+            <div class="menu">
+                <img id="menu__opener" onclick="menuDictating()" class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img">
+                <img id="menu__closer" onclick="menuDictating()" class="x_button" src="../static/images/close.png" alt="error img">
+            </div>
+        </nav>
     </header>
     <main>
         <article>
