--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,7 @@
                     alt="{{ event.title }}">
                     <h3>{{ event.title }}</h3>
                     <p class="event-date">Date: {{ event.date.day }} {{"-"}} {{event.date.month}} {{"-"}} {{event.date.year}}</p>
-                    <p class="event-location">Location: Timisoara, Parcul Copiilor</p>
+                    <p class="event-location">Location: {{ event.location }}</p>
                     <!-- make this description not show "..." if the text is short enough -->
                     <!--<p> event.description[:140] + "..." </p> PS: add 2 curly braces for usage-->
                 </article>
