--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link rel="stylesheet" href="../static/css/register.css">
 </head>
 <body>
-    <h1>Register Form</h1>
-
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        {{ form.username }}
-        {{ form.password }}
-        {{ form.submit }}
-    </form>
-    
+    <div class="auth-container">
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="password" id="password" name="password" placeholder="Password" required>
+            <button type="submit">Register</button>
+        </form>
+        <p id="message"></p>
+        <p>Already have an account? <a href="index.html">Login here</a></p>
+    </div>
+    <script src="../static/js/register.js"></script>
 </body>
 </html>
