--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,7 +10,7 @@
     <div class="auth-container">
         <h2>Login</h2>
         <form id="loginForm">
-            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
