--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -10,7 +10,10 @@
     <div class="auth-container">
         <h2>Register</h2>
         <form id="registerForm">
-            <input type="text" id="username" name="username" placeholder="Username" required>
+            <input type="first_name" id="first_name" name="first_name" placeholder="First Name" required>
+            <input type="last_name" id="last_name" name="last_name" placeholder="Last Name" required>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="confirm_email" id="confirm_email" name="confirm_email" placeholder="Confirm Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Register</button>
         </form>
