--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -56,6 +56,8 @@
             <a href="" class="cta-button">Buy Tickets</a>
         </div>
     </main>
-    <script src="../static/js/navbar.js"></script>
+    <script src="../../static/js/scripts.js"></script>
+    <script src="../../static/js/navbar.js"></script>
+
 </body>
 </html>
