--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,59 +6,70 @@
     <title>Events Home Page</title>
     <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/navigation.css">
 </head>
 <body id="body">
-    <div id="menu__body" class="menu_active">
-        <ul class="navigation_links">
-            <li class="event_link"><a href="#">Home</a></li>
-            <li class="event_link"><a href="#">Events</a></li>
-            <li class="event_link"><a href="#">Cities</a></li>
-            <li class="event_link"><a href="#">Dates</a></li>
-            <li class="event_link"><a href="#">Contact</a></li>
-        </ul>
-        <div class="post_event">
-            <a href="/post_event">Post your event!</a>
-        </div>
+    <!--
+    <div class="post_event">
+        <a href="/post_event">Post your event!</a>
     </div>
+    -->
     <header>
-        <nav class="navbar">
-            <div class="logos">
-                <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
-                <a href="/" class="logo_text">Eventer</a>
-            </div>
-            <div class="cities">
-                <a href="#"><img class="city_icon" src="../static/images/city.png" alt="rooro"></a>
-                <a href="#"><p>Cities</p></a>
-            </div>
-            <div class="menu">
-                <img id="menu__opener" onclick="menuDictating()" class="hamburger_menu" src="../static/images/hamburger_menu.png" alt="error img">
-                <img id="menu__closer" onclick="menuDictating()" class="x_button" src="../static/images/close.png" alt="error img">
-            </div>
-        </nav>
+        <div class="group_nav">
+            <nav class="navbar">
+                <div class="burger">
+                    <img src="../static/images/hamburger_menu.png" alt="ftlp">
+                </div>
+                <div class="logos">
+                    <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
+                    <a href="/" class="logo_text">Eventer</a>
+                </div>
+            </nav>
+        </div>
     </header>
     <main>
-        <section class="hero">
-            <div class="hero-left">
-                <h2>Discover the best events in Timisoara!</h2>
-            </div>
-            <div class="hero-right">
-                <img src="../static/images/hero.jpg">
-            </div>
-        </section>
-        <section id="events">
-            {% for event in events %}
-                <article class="event-card" data-article="{{ url_for('get_event', event_id=event.id) }}">
-                    <img src="{{ url_for('static', 
-                    filename=event.image_filepath.replace('app\\static\\', '').replace('\\', '/')) }}" 
-                    alt="{{ event.title }}">
-                    <h3>{{ event.title }}</h3>
-                    <p class="event-date">Date: {{ event.date.day }} {{"-"}} {{event.date.month}} {{"-"}} {{event.date.year}}</p>
-                    <p class="event-location">Location: Timisoara, Parcul Copiilor</p>
-                    <!-- make this description not show "..." if the text is short enough -->
-                    <!--<p> event.description[:140] + "..." </p> PS: add 2 curly braces for usage-->
-                </article>
-            {% endfor %}
-        </section>
+        <sidenav class="side_nav">
+            <a href="#" class="home">
+                <img src="../static/images/house2.png" alt="ftlp">
+                <p>Home</p>
+            </a>
+            <a href="/post_event" class="post_event">
+                <img src="../static/images/create_event.png" alt="ftlp">
+                <p>Post</p>
+            </a>
+            <a href="#" class="account">
+                <img src="../static/images/account.png" alt="ftlp">
+                <p>Account</p>
+            </a>
+            <a href="#" class="contact">
+                <img src="../static/images/phone.png" alt="ftlp">
+                <P>Contact</P>
+            </a>
+        </sidenav>
+        <div class="main_content">
+            <section class="hero">
+                <div class="hero-left">
+                    <h2>Discover the best events in Timisoara!</h2>
+                </div>
+                <div class="hero-right">
+                    <img src="../static/images/hero.jpg">
+                </div>
+            </section>
+            <section id="events">
+                {% for event in events %}
+                    <article class="event-card" data-article="{{ url_for('get_event', event_id=event.id) }}">
+                        <img src="{{ url_for('static', 
+                        filename=event.image_filepath.replace('app\\static\\', '').replace('\\', '/')) }}" 
+                        alt="{{ event.title }}">
+                        <h3>{{ event.title }}</h3>
+                        <p clasx`s="event-date">Date: {{ event.date.day }} {{"-"}} {{event.date.month}} {{"-"}} {{event.date.year}}</p>
+                        <p class="event-location">Location: Timisoara, Parcul Copiilor</p>
+                        <!-- make this description not show "..." if the text is short enough -->
+                        <!--<p> event.description[:140] + "..." </p> PS: add 2 curly braces for usage-->
+                    </article>
+                {% endfor %}
+            </section>
+        </div> 
     </main>
     <footer>
         <nav>
@@ -69,5 +80,6 @@
         </nav>
     </footer>
     <script src="../static/js/scripts.js"></script>
+    <script src="../static/js/navbar.js"></script>
 </body>
 </html>
