--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -37,15 +37,15 @@
             margin-top: 1rem;
             padding: 0.75rem 1.5rem;
             font-size: 1rem;
-            color: white;
-            background-color: #007bff;
+            color: #3f3f3f;
+            background-color: #ffd903;
             border: none;
             border-radius: 5px;
             text-decoration: none;
             transition: background-color 0.3s ease;
         }
         .btn:hover {
-            background-color: #0056b3;
+            background-color: #ffd903;
         }
         .ghost {
             font-size: 8rem;
