Chnaged theyellow design to black

--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ event.title }}</title>
     <link rel="icon" href="../static/images/logo.png"/>
-    <link rel="stylesheet" href="../static/css/event.css">
-    <link rel="stylesheet" href="../static/css/navbar.css">
+    <link rel="stylesheet" href="../../static/css/event.css">
+    <link rel="stylesheet" href="../../static/css/navigation.css">
 </head>
 <body>
     <header>
