--- a/app/static/css/navigation.css
+++ b/app/static/css/navigation.css
@@ -14,7 +14,7 @@
     position: sticky;
     z-index: 3;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-    background-color: #ffd903;
+    background-color: #141414;
 }
 
 .group_nav {
@@ -43,7 +43,7 @@
     padding: 0px 20px 5px 10px;
     font-size: 1.5rem;
     font-family: 'Playwrite';
-    color:#3f3f3f;
+    color:#ffd903;
     text-decoration: none;
     font-weight: bold;
 }
@@ -57,8 +57,8 @@
     flex-direction: column;
     align-items: center;
     z-index: 55;
-    background-color: #ffd903;
-    color: #3f3f3f;
+    background-color: #141414;
+    color: white;
 }
 
 .home {
@@ -67,7 +67,7 @@
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color:#3f3f3f;  
+    color:rgba(255, 255, 255, 0.874);  
 }
 
 .home img {
@@ -86,7 +86,7 @@
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color:#3f3f3f;
+    color:rgba(255, 255, 255, 0.874);
 }
 
 .post_event img {
@@ -103,7 +103,7 @@
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color:#3f3f3f;
+    color:rgba(255, 255, 255, 0.874);
 }
 
 .account img {
@@ -120,7 +120,7 @@
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color:#3f3f3f;
+    color:rgba(255, 255, 255, 0.874);
 }
 
 .contact img {
